--- a/basic_calculation/basic_calculation/basic_calculation.csproj
+++ b/basic_calculation/basic_calculation/basic_calculation.csproj
@@ -21,4 +21,10 @@
       <HintPath>..\..\..\..\Program Files (x86)\Microsoft\Xamarin\NuGet\xamarin.androidx.lifecycle.viewmodel\2.2.0.4\lib\monoandroid90\Xamarin.AndroidX.Lifecycle.ViewModel.dll</HintPath>
     </Reference>
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="StartPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
