スタート変更（未完成）

--- a/basic_calculation/basic_calculation.Android/basic_calculation.Android.csproj
+++ b/basic_calculation/basic_calculation.Android/basic_calculation.Android.csproj
@@ -82,14 +82,15 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\drawable\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\basic_calculation\basic_calculation.csproj">
       <Project>{24B21882-D207-4D08-BCC2-50619342ED11}</Project>
       <Name>basic_calculation</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\DirectionImage.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
