スタート画面，エラーの修正

--- a/basic_calculation/basic_calculation.Android/basic_calculation.Android.csproj
+++ b/basic_calculation/basic_calculation.Android/basic_calculation.Android.csproj
@@ -82,7 +82,9 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\number.jpg" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\basic_calculation\basic_calculation.csproj">
       <Project>{24B21882-D207-4D08-BCC2-50619342ED11}</Project>
@@ -91,6 +93,18 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\DirectionImage.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\etc.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\ope.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\x.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\cal.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
